Funcionando static files... HTML, CSS, JS, Images, etc...

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,12 @@ spring:
     active: ${SPRING_PROFILES_ACTIVE:dev}
 ---
 spring:
+  resources: 
+    chain: 
+      strategy: 
+        content: 
+          enabled: true
+          paths: /**
   profiles: dev
   jpa:
     show-sql: true
