--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: ${SPRING_PROFILES_ACTIVE:cloud}
+    active: ${SPRING_PROFILES_ACTIVE:dev}
 ---
 spring:
   resources: 
